k8s-tentativa-01/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-usuario
  namespace: crud-elk
...
