k8s-tentativa-01/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crud-elk-ingress
  namespace: crud-elk
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: crud-elk.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: api-usuario
                port:
                  number: 8080
          - path: /kibana(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 5601
          - path: /elasticsearch(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: elasticsearch
                port:
                  number: 9200
          - path: /logstash(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: logstash
                port:
                  number: 9600
